# precedent-slack-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PRECEDENT_BUILD_PROMPT.md  PRECEDENT_TEAM_PLAYBOOK.md  README.md  manifest.json  pyproject.toml  slack.json
docs/: ARCHITECTURE.md  DEPLOY.md  DEVPOST.md  JUDGE_ACCESS.md  WORLD.md  slack-app-manifest.yaml
prompts/: archivist.md  extractor.md  gatekeeper.md  sentinel.md
scripts/seed/: insert_canon.py  seed_world.py
src/precedent/: __init__.py  config.py  telemetry.py
src/precedent/agents/: __init__.py  archivist.py  extractor.py  gatekeeper.py  sentinel.py
src/precedent/db/: __init__.py  client.py  ddl.sql  migrate.py  schema.py
src/precedent/mcp/: __init__.py  auth.py  server.py
src/precedent/services/: __init__.py  canon.py  canvas.py  embeddings.py  llm.py  rts.py
src/precedent/slack/: __init__.py  app.py  backfill.py  capture.py
src/precedent/slack/blocks/: __init__.py  app_home.py  decision_card.py  digest.py  drift_card.py  ratify_card.py
src/precedent/slack/listeners/: __init__.py  actions.py  assistant.py  commands.py  home.py  messages.py  reactions.py
tests/: contradiction_eval.jsonl  eval_runner.py  test_smoke.py
